<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NASAPictureoftheDay</string>
    <string name="img_title">Image Title</string>
    <string name="dateLabel">Picture Date</string>
    <string name="single_day">Choose a Single Day</string>
    <string name="description">Description</string>
    <string name="date">YYYY-MM-DD</string>
    <string name="multi_day">Choose Range for Multiple Days</string>
    <string name="reqFail">Picture Request Failed</string>
    <string name="success">Successfully Found a Picture</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="btnFavPhotos">My Favourites</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btnSetWallaper" translatable="false">Set Wallpaper</string>
    <string name="btnAddToFav">Add to Favs</string>

    <!-- Strings for info page -->
    <string name="infoButton">About</string>
    <string name="aboutTitle">About NASA Picture of the Day!</string>
    <string name="aboutDetails">
        This app was created to allow uses to set their wallpapers to NASAs picture of the day!\n
        You can set your wallpaper with the photo of the day!\n
        You can set you wallpaper to a past pic of the day!\n
    </string>
    <string name="creators">Creators of the App</string>
    <string name="creatorDetails">
        This app was created by:\n
        Maximus Slabon\n
            AND\n
        Braedon Watson\n
    </string>
    <string name="btnBackToHome">Back to Home Screen</string>
    <string name="github">Check out the project on GitHub</string>
    <string name="githublink">https://github.com/Braedy2/NASAPicureoftheDay</string>

    <!-- Strings for login/auth-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="logged_out">You are now logged out</string>
    <string name="no_account">Do not have an account, Register </string>
    <string name="here">Here</string>
    <string name="logout">Logout</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>